--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-        table {
+        /* table {
             width: 50%;
             border-collapse: collapse;
             margin: 20px auto;
@@ -16,4 +16,26 @@
         }
         h2 {
             text-align: center;
-        }
+        } */
+
+
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  padding: 5px;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+video, audio {
+  width: 100%;
+  max-width: 640px;
+}
